# connected-vehicle-app-growth-analytics

./: .gitignore  INTERVIEW_TALK_TRACK.md  LICENSE  README.md  pyproject.toml  requirements.txt
cv_growth/: __init__.py  __main__.py  analysis.py  config.py  data_generation.py  database.py  modeling.py  plotting.py  reporting.py
docs/: data_dictionary.md  metric_framework.md
reports/: connected_vehicle_growth_case.md  propensity_model_card.md
reports/tables/: attribution.csv  channel_funnel.csv  experiment.csv  lifecycle.csv  operations.csv  product_revenue.csv  retention.csv
sql/: 01_lifecycle_kpi_tree.sql  02_feature_retention.sql  03_product_revenue.sql  04_channel_touchpoint_funnel.sql  05_experiment_incrementality.sql  06_attribution_models.sql  07_model_features.sql  08_operations_sla_quality.sql
tests/: smoke_test.py
